--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "rambda": "^3.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-images": "^1.1.0-beta.3",
     "react-lazy-load-image-component": "^1.3.2",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
